# computer_vision

./: .gitignore  CMakeLists.txt
Code/include/: bag_of_visual_words.hpp  bounding_box.hpp  evaluation_metrics.hpp  localization.hpp  player.hpp  segmentation.hpp
Code/src/: bag_of_visual_words.cpp  bounding_box.cpp  evaluation_metrics.cpp  localization.cpp  main.cpp  player.cpp  segmentation.cpp
localization/: CV_Training.ipynb  main.cpp
